fixed the gap between consent form and text box

--- a/css/main.css
+++ b/css/main.css
@@ -573,7 +573,6 @@
     border: 2px solid #d6d6d6;
     background-color: #f7f7f7;
     border-radius: 5px;
-    margin-bottom: 30px;
     font: inherit;
     width: auto;
  }
